// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Label checkGrammar=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label checkGrammar=true 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label checkHighlight=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label checkHighlight=true 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label checkSpaces=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label checkSpaces=true 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label className="my-classname" 1`] = `
<span
  className="uu5-bricks-label my-classname uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="brown" 1`] = `
<span
  className="color-schema-brown uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="brown-rich" 1`] = `
<span
  className="color-schema-brown-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="cyan" 1`] = `
<span
  className="color-schema-cyan uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="cyan-rich" 1`] = `
<span
  className="color-schema-cyan-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="default" 1`] = `
<span
  className="color-schema-default uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="green" 1`] = `
<span
  className="color-schema-green uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="green-rich" 1`] = `
<span
  className="color-schema-green-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="grey" 1`] = `
<span
  className="color-schema-grey uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="grey-rich" 1`] = `
<span
  className="color-schema-grey-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="orange" 1`] = `
<span
  className="color-schema-orange uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="orange-rich" 1`] = `
<span
  className="color-schema-orange-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="pink" 1`] = `
<span
  className="color-schema-pink uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="pink-rich" 1`] = `
<span
  className="color-schema-pink-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="purple" 1`] = `
<span
  className="color-schema-purple uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="purple-rich" 1`] = `
<span
  className="color-schema-purple-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="red" 1`] = `
<span
  className="color-schema-red uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="red-rich" 1`] = `
<span
  className="color-schema-red-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="yellow" 1`] = `
<span
  className="color-schema-yellow uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label colorSchema="yellow-rich" 1`] = `
<span
  className="color-schema-yellow-rich uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label content="This is Content from ContentMixin" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label content=12345 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label controlled=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label controlled=true 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label default props 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label disabled=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label disabled=true 1`] = `
<span
  className="uu5-bricks-label uu5-common-disabled uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.Label docKit examples UU5.Bricks.Label should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <h1
    key="uu5-content-0"
  >
    <Label
      colorSchema="info"
      content="Beginner"
      id="uuID02"
    />
  </h1>
  <h2
    key="uu5-content-1"
  >
    <Label
      colorSchema="danger"
      content="Intermediate"
      id="uuID03"
    />
  </h2>
  <h3
    key="uu5-content-2"
  >
    <Label
      colorSchema="warning"
      content="Upper intermediate"
      id="uuID04"
    />
  </h3>
  <h4
    key="uu5-content-3"
  >
    <Label
      colorSchema="success"
      content="Advanced"
      id="uuID05"
    />
  </h4>
</div>
`;

exports[`UU5.Bricks.Label dynamic=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label dynamic=true 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label hidden=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label hidden=true 1`] = `
<span
  className="uu5-bricks-label uu5-common-hidden uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label id="myId" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="myId"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="myId_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label ignoreHTML=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label ignoreHTML=true 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label mainAttrs=undefined 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label name="myName" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="bigBox" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="bigBoxCollection" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="box" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="boxCollection" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="container" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="inline" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="page" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="smallBox" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="smallBoxCollection" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label nestingLevel="spa" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label noIndex=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label noIndex=true 1`] = `
<span
  className="uu5-bricks-label uu5-noindex uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label pureRender=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label pureRender=true 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label selected=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label selected=true 1`] = `
<span
  className="uu5-bricks-label uu5-common-selected uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label style="padding:8px; borderRadius: 2px" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label style={"backgroundColor":"red","color":"blue"} 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label textCorrector=false 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label textCorrector=true 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;

exports[`UU5.Bricks.Label tooltip="My Tooltip" 1`] = `
<span
  className="uu5-bricks-label uu5-bricks-label-icon-right uu5-bricks-label-filled"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <Icon
    icon={null}
    id="uuID_icon"
    mainAttrs={
      Object {
        "onClick": [Function],
      }
    }
  />
</span>
`;
